# taskforge

./: README.md  config-example.yaml  pyproject.toml
config/: config.py
docs/: design.md
scripts/: test.sh
taskforge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
taskforge/cli/: __init__.py  args.py  commands.py
taskforge/cmd/taskforge/: main.py
taskforge/config/: __init__.py  loader.py  types.py
taskforge/executor/: __init__.py  executor.py  types.py
taskforge/graph/: __init__.py  dag.py  types.py
tests/: info.md  test_cli.py  test_config_loader.py  test_dag.py  test_executor.py
